@@ -134,6 +134,7 @@ Release build 10
 - Fix bug causing device button assignments not always to be updated when assignment made through adding new device upgrade (Graham)
 - Fix bug preventing protocol deletion when deleting device upgrade in remote with segments (Graham)
 - Add icon column with appropriate functionality to ButtonTableModel (Graham)
+- Fix bug with protocol code not updating correctly when edited in Device Upgrade Editor (Graham)
 
 Changes for v2.02
 -- Alpha --
